--- a/Fitnesstic.css
+++ b/Fitnesstic.css
@@ -1,67 +1,132 @@
-body {
-	font-family:Georgia, 'Times New Roman', Times, serif;
-	font-size: 20px;
-	line-height: 1;
-	color: #ffffff;
-	background:linear-gradient(rgb(42, 3, 3), rgb(175, 175, 223));
-	margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+:root{
+	--primary-color: #d63031;
+	--secondary-color: #636e72;
+	--font: 'Poppins', sans-serif;
+}
+*{
 	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
-.name {
-	position: absolute;
-	top: 0px;
-	left: 15%;
-
-	font-size: 15px;
-	font-family: Arial, 
-		Helvetica, sans-serif;
-	background: linear-gradient(
-		to right, #f32170, #ff6b08,
-		 #cf23cf, #eedd44);
-	-webkit-text-fill-color: transparent;
-	-webkit-background-clip: text;
-	letter-spacing: 0px;
-}
-
-div img {
-	height: 5%;
-	position: relative;
-	top: -50px;
-	right: 90px;
-	height: auto;
-	width: 20%;
-} 
-
-#nav{
-	overflow: hidden;
-	position: fixed;
-	top:0;
-	width: auto;
-}
-  nav{
-	width: 100%;
-	height: 50px;
-	line-height: 50px;
-
-  }
-  nav ul{
-	float: center;
-	margin-right: 20px;
-  }
-  nav ul li{
-	list-style-type: none;
-	display: inline-block;
-	transition: 0.7s all;
-  }
-  nav ul li:hover{
-	background-color:rgb(46, 113, 213);
-  }
-  nav ul li a{
+.btn{
+	padding: .6rem .8rem;
+	text-transform: uppercase;
+	font-family: var(--font);
+	background: var(--primary-color);
+	color: white;
+	font-size: 16px;
 	text-decoration: none;
-	color: #fff;
-	padding: 30px;
+	outline: none;
+	border: 2px solid var(--primary-color);
+	transition: .3s;
+	cursor: pointer;
+}
+.btn:hover{
+	background: transparent;
+}
+body{
+	background: black;
+	font-family: var(--font);
+}
+
+nav{
+	position: fixed;
+	width: 100vw;
+	height: 60px;
+	border-top: .5rem solid var(--primary-color);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	z-index: 999999;
+}
+
+.logo{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 55px;
+	width: 15%;
+	font-weight: 700;
+	background: var(--primary-color);
+}
+
+.logo::before{
+	content: "Fit";
+	color: white;
+}
+.logo::after{
+	content: "nesstic";
+	color: black;
+}
+
+ul{
+	display: flex;
+	align-items: center;
+	height: 60px;
+}
+
+ul a{
+	text-decoration: none;
+	color: white;
+	margin: 0 2rem;
+	text-transform: uppercase;
+	font-family: var(--font);
+	font-weight: 700;
+	font-size: 16px;
+}
+ul li{
+	list-style: none;
+}
+ul a:hover{
+	color: var(--primary-color);
+}
+
+.banner{
+	background: url("https://cdn.pixabay.com/photo/2020/06/17/21/09/man-5311171__340.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment:local;
+	height: 100vh;
+}
+
+.intro{
+	position: absolute;
+	top: 30%;
+	left: 10%;
+	color: white;
+}
+
+.intro h2,p{
 	display: block;
-  }
- 
+	width: 60%;
+}
+
+.intro h2{
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size: 30px;
+}
+.intro .btn{
+	margin-top: 2rem;
+}
+
+.row{
+	display: flex;
+	justify-content: center;
+}
+.card{
+	width: 33.3%;
+	height: 250px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+.card h2{
+	text-transform: uppercase;
+}
+
   
 
