--- a/fashionfinity.css
+++ b/fashionfinity.css
@@ -20,19 +20,17 @@
 #title {
     position: relative; 
     justify-content: center;
-    color: rgb(78, 16, 120);
+    color: rgb(238, 19, 110);
     text-align: center;
-    font-size: 30px;
+    font-size: 27px;
     top: 30px;
 }
 
 #title pre{ 
     margin: auto;
-    font-family: serif;
-    border: 7px solid rgb(106, 9, 171);
-   /* box-shadow: 8px 4px 5px 25px rgb(109, 78, 149) inset;*/
+    font-family: Barrio, cursive;
     padding: 20px;
-    text-shadow: 6px 5px 8px rgba(41, 38, 44, 0.9);
+    text-shadow: 6px 5px 8px rgba(15, 27, 28, 0.714);
     width: 42%;
     z-index: 1;
     /*transform: translateX(77%);*/
@@ -45,15 +43,16 @@
   /*  width: 50%;
     height: 400px; */
     font-size: 80px;
-    top: 35px;
 }
 
 #quote pre{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    font-family: Gluten, sans-serif; 
     font-style: italic;
+    margin-top: 27px;
 }
 
 #nav{
+    position: relative;
     width: 100%;
     height: 100px;
    /* background-color: blueviolet;*/
@@ -63,56 +62,121 @@
 .navigation{
     position: relative;
     display: inline-block;
-    padding: 80px 20px 20px; 
+    /*margin-top: 20px;*/
+    padding: 90px 20px; 
 }
 
 .navigation a{
     text-decoration: none; 
     font-weight: bold;
-    color: rgba(0, 0, 0, 0.575);
+    color: rgba(3, 3, 3, 0.984);
+    background-color: palevioletred;
     padding: 10px;
 }
 
 .navigation a:hover{
     background-color: black;
-    color: whitesmoke;
+    color: rgb(255, 12, 113);
 }
 
-.women{
-    position: relative;
-    text-align: center;
-    margin: 60px;
-}
-
-.women img{
-    width: 30%;
-    height: auto;
-}
-
-.women span{
-    position: absolute;
-    left: 20%;
-    bottom: 0;
-    transform: translateY(-170px);
-    color: whitesmoke;
-    font-size: 60px;
-    font-weight: bolder;
-}
-
-.men{
-    position: relative;
-    margin: 60px;
-    text-align: center;
-}
-
-.men img{
-    width: 30%;
+.img-container{
+    position: relaive;
+    width: 80%;
     height: 500px;
+    margin:auto;
 }
 
-.men span{
+#img-women{
+    width: 34%;
+    height: 400px;
+    border-radius: 20px 90px;
+}
+#img-men{
+    width: 34%;
+    height: 400px;
+    float: right; 
+    border-radius: 20px 90px;
+} 
+
+#img-women:hover, #fashion-affair-women:hover{
+    border-radius: 45px/50px; 
+    border: 6px solid rgb(232, 9, 83);
+    color: rgb(152, 42, 254);
+    background-color: rgb(0, 0, 0);
+}
+
+#fashion-affair-women{
     position: absolute;
-    color: whitesmoke;
-    font-size: 60px;
+    left: 12%;
+    transform: translateY(200px);
+    color: rgb(238, 19, 110);
+    font-size: 33px;
     font-weight: bolder;
+    z-index: 1; 
+}
+
+#fashion-affair-men{
+    position: absolute;
+    float: right;
+    right: 14%;
+    bottom: -28%;
+    color: rgb(238, 19, 110);
+    font-size: 33px;
+    font-weight: bolder;
+    z-index: 1; 
+} 
+
+#img-men:hover, #fashion-affair-men:hover{
+    border-radius: 45px/50px; 
+    border: 6px solid rgb(232, 9, 83);
+    color: rgb(152, 42, 254);
+    background-color: rgb(0, 0, 0);
+} 
+
+#hr1{ 
+    width: 60%;
+    height: 6px;
+    background-color: rgba(0, 0, 0, 0.607);
+}
+
+#hr2{
+    width: 60%;
+    height: 6px;
+    background-color: rgba(0, 0, 0, 0.607);
+}
+
+#subheading{
+    color: rgb(3, 74, 146); 
+    font-style: italic; 
+    font-family: Ribeye, cursive; 
+    text-align: center; 
+    font-size: 80px; 
+    text-shadow: 3px 5px 7px rgb(47, 46, 46);
+}
+
+.abouts{
+    width: 373px;
+    height: 350px;
+    padding: 10px; 
+    border-right: 4px dotted rgb(246, 48, 124);
+    display: block;
+    float: left;
+    font-family: Caveat, serif;
+    font-size: 30px;
+    color:rgba(152, 66, 136, 0.962)
+}
+
+.abouts:hover{
+    color:rgb(236, 23, 232);
+    font-size: 35px;
+    background-color: black;
+} 
+
+.footer pre{
+    width: 100%;
+    height: 40px;
+    background-color: black; 
+    color:bisque;
+    font-family: Barrio, cursive;
+    text-align: center;
 }
